don't try to execute empty command

BUG: 243424